@@ -1,12 +1,15 @@
 package jawa.sinaukoding.sk.service;
 
 import jawa.sinaukoding.sk.entity.Auction;
+import jawa.sinaukoding.sk.entity.AuctionBid;
 import jawa.sinaukoding.sk.entity.User;
 import jawa.sinaukoding.sk.model.Authentication;
+import jawa.sinaukoding.sk.model.request.BuyerCreateBiddingReq;
 import jawa.sinaukoding.sk.model.request.SellerCreateAuctionReq;
 import jawa.sinaukoding.sk.model.Response;
 import jawa.sinaukoding.sk.model.request.UpdateStatusReq;
 import jawa.sinaukoding.sk.model.response.AuctionDto;
+import jawa.sinaukoding.sk.model.response.BiddingDto;
 import jawa.sinaukoding.sk.repository.AuctionRepository;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
@@ -20,7 +23,7 @@ public final class AuctionService extends AbstractService {
     private static AuctionRepository auctionRepository;
 
     public AuctionService(final Environment env, final AuctionRepository auctionRepository) {
-        this.auctionRepository = auctionRepository;
+        AuctionService.auctionRepository = auctionRepository;
     }
 
     private static String generateCode() {
@@ -46,7 +49,7 @@ public final class AuctionService extends AbstractService {
                     authentication.id()
             );
 
-            final Long saved = auctionRepository.saveAuction(newAuction);
+            final long saved = auctionRepository.saveAuction(newAuction);
 
             if (saved == 0L) {
                 return Response.create("05", "01", "Gagal membuat lelang.", null);
@@ -56,74 +59,13 @@ public final class AuctionService extends AbstractService {
         });
     }
 
-    public static Response<Object> rejectAuction(final Authentication authentication, Long id) {
-        return precondition(authentication, User.Role.ADMIN).orElseGet(() -> {
-            List<Auction> auctionOptional = auctionRepository.findById(id);
-            Auction auction = auctionOptional.get(0);
-            if (auction.status().equals(auction.status().WAITING_FOR_APPROVAL)){
-                if (isInvalid(auction)) {
-                    Auction updatedAuction = new Auction(
-                            auction.id(),
-                            auction.code(),
-                            auction.name(),
-                            auction.description(),
-                            auction.offer(),
-                            auction.highestBid(),
-                            auction.highestBidderId(),
-                            auction.highestBidderName(),
-                            Auction.Status.REJECTED,
-                            auction.startedAt(),
-                            auction.endedAt(),
-                            auction.createdBy(),
-                            auction.updatedBy(),
-                            auction.deletedBy(),
-                            auction.createdAt(),
-                            auction.updatedAt(),
-                            auction.deletedAt()
-                    );
-                    Long x = auctionRepository.RejectedAuction(id);
-                    return Response.create("01", "01", "Auction rejected successfully", x);
-                } else {
-                    return Response.create("01", "02", "cannot rejected", null);
-                }
-            }
-            return Response.badRequest();
-
-        });
-
-    }
-
-    private static boolean isInvalid(Auction auction) {
-        return auction.id() == null ||
-                isNullOrEmpty(auction.code()) ||
-                isNullOrEmpty(auction.name()) ||
-                isNullOrEmpty(auction.description()) ||
-                auction.offer() == null ||
-                auction.highestBid() == null ||
-                auction.highestBidderId() == null ||
-                isNullOrEmpty(auction.highestBidderName()) ||
-                auction.status() == null ||
-                auction.startedAt() == null ||
-                auction.endedAt() == null ||
-                auction.createdBy() == null ||
-                auction.updatedBy() == null ||
-                auction.deletedBy() == null ||
-                auction.createdAt() == null ||
-                auction.updatedAt() == null ||
-                auction.deletedAt() == null;
-    }
-
-    private static boolean isNullOrEmpty(String str) {
-        return str == null || str.trim().isEmpty();
-    }
-
-    public Response<Object> listAuction(final Authentication authentication, final int page, final int size) {
+    public Response<Object> listAuction(final Authentication authentication, final int page, final int size, String name) {
         return precondition(authentication, User.Role.ADMIN, User.Role.SELLER, User.Role.BUYER).orElseGet(() -> {
             if (page <= 0 || size <= 0) {
                 return Response.badRequest();
             }
 
-            final List<Auction> auctions = auctionRepository.listAuction(page, size);
+            final List<Auction> auctions = auctionRepository.listAuction(page, size, "Auction");
             final List<AuctionDto> dto = auctions.stream()
                     .map(auction -> new AuctionDto(
                             auction.id(),
@@ -139,76 +81,21 @@ public final class AuctionService extends AbstractService {
         });
     }
 
-    public Response<Object> ApproveAuction(final Authentication authentication, Long id) {
-        return precondition(authentication, User.Role.ADMIN).orElseGet(() -> {
-            List<Auction> auctionOptional = auctionRepository.findById(id);
-            Auction auction = auctionOptional.get(0);
-            if (auction.status().equals(auction.status().WAITING_FOR_APPROVAL)){
-                if (ifPresent(auction)) {
-                    Auction updatedAuction = new Auction(
-                            auction.id(),
-                            auction.code(),
-                            auction.name(),
-                            auction.description(),
-                            auction.offer(),
-                            auction.highestBid(),
-                            auction.highestBidderId(),
-                            auction.highestBidderName(),
-                            Auction.Status.APPROVED,
-                            auction.startedAt(),
-                            auction.endedAt(),
-                            auction.createdBy(),
-                            auction.updatedBy(),
-                            auction.deletedBy(),
-                            auction.createdAt(),
-                            auction.updatedAt(),
-                            auction.deletedAt()
-                    );
-                    Long x = auctionRepository.ApproveAuction(id);
-                    return Response.create("01", "01", "Auction Approved successfully", x);
-                } else {
-                    return Response.create("01", "02", "cannot Approved", null);
-                }
-            }
-            return Response.badRequest();
-
-        });
-
-    }
-
-    private boolean ifPresent(Auction auction) {
-        return auction.id() != null ||
-                isNotNullOrEmpty(auction.code()) ||
-                isNotNullOrEmpty(auction.name()) ||
-                isNotNullOrEmpty(auction.description()) ||
-                auction.offer() != null ||
-                auction.highestBid() != null ||
-                auction.highestBidderId() != null ||
-                isNotNullOrEmpty(auction.highestBidderName()) ||
-                auction.status() != null ||
-                auction.startedAt() != null ||
-                auction.endedAt() != null ||
-                auction.createdBy() != null ||
-                auction.updatedBy() != null ||
-                auction.deletedBy() != null ||
-                auction.createdAt() != null ||
-                auction.updatedAt() != null ||
-                auction.deletedAt() != null;
-    }
-
     private boolean isNotNullOrEmpty(String str) {
         return str != null && !str.trim().isEmpty();
     }
 
     public Response<Object> getAuctionById(final Authentication authentication, final Long id) {
         return precondition(authentication, User.Role.ADMIN, User.Role.SELLER, User.Role.BUYER).orElseGet(() -> {
-            List<Auction> auctions = auctionRepository.findById(id);
+            List<Auction> auctions = AuctionRepository.findById(id);
 
             if (auctions.isEmpty()) {
                 return Response.create("09", "01", "Auction not found", null);
             }
 
-            Auction auction = auctions.get(1);
+            Auction auction = auctions.getFirst();
+            List<AuctionBid> biddings = auctionRepository.findBiddingByAuctionId(auction.id());
+
             AuctionDto auctionDto = new AuctionDto(
                     auction.id(),
                     auction.code(),
@@ -220,8 +107,18 @@ public final class AuctionService extends AbstractService {
                     auction.status().toString()
             );
 
+            List<BiddingDto> biddingDto = biddings.stream()
+                    .map(bid -> new BiddingDto(
+                            bid.id(),
+                            bid.auctionId(),
+                            bid.bid(),
+                            bid.bidder(),
+                            bid.createdAt().toString()
+                    )).toList();
+
             Map<String, Object> responseData = new HashMap<>();
             responseData.put("auction", auctionDto);
+            responseData.put("bidding", biddingDto);
 
             return Response.create("09", "00", "Sukses", responseData);
         });
@@ -231,12 +128,12 @@ public final class AuctionService extends AbstractService {
         return precondition(authentication, User.Role.ADMIN).orElseGet(() -> {
             Auction.Status newStatus = req.status();
 
-            List<Auction> auctions = auctionRepository.findById(req.id());
+            List<Auction> auctions = AuctionRepository.findById(req.id());
             if (auctions.isEmpty()) {
                 return Response.create("07", "02", "Auction tidak ditemukan", null);
             }
 
-            Auction auction = auctions.get(0);
+            Auction auction = auctions.getFirst();
 
             if (auction.status() == Auction.Status.APPROVED || auction.status() == Auction.Status.REJECTED) {
                 return Response.create("07", "03", "Status auction sudah DIUBAH dan tidak bisa diubah lagi", null);
@@ -262,12 +159,86 @@ public final class AuctionService extends AbstractService {
                     auction.deletedAt()
             );
 
-            long updated = auctionRepository.updateAuctionStatus(updatedAuction);
+            long updated = AuctionRepository.updateAuctionStatus(updatedAuction);
 
             if (updated == 1L) {
                 return Response.create("07", "00", "Sukses", updated);
             } else {
                 return Response.create("07", "01", "Gagal update Status", null);
+            }
+        });
+    }
+
+    public static Response<Object> closeAuctionStatus(Authentication authentication, UpdateStatusReq req) {
+        return precondition(authentication, User.Role.ADMIN, User.Role.SELLER).orElseGet(() -> {
+            Auction.Status newStatus = req.status();
+
+            List<Auction> auctions = auctionRepository.findById(req.id());
+            if (auctions.isEmpty()) {
+                return Response.create("07", "02", "Auction tidak ditemukan", null);
+            }
+
+            Auction auction = auctions.get(0);
+
+            if (auction.status() == Auction.Status.CLOSED) {
+                return Response.create("07", "03", "Status auction sudah CLOSED dan tidak bisa diubah lagi", null);
+            }
+
+            Auction updatedAuction = new Auction(
+                    auction.id(),
+                    auction.code(),
+                    auction.name(),
+                    auction.description(),
+                    auction.offer(),
+                    auction.highestBid(),
+                    auction.highestBidderId(),
+                    auction.highestBidderName(),
+                    newStatus,
+                    auction.startedAt(),
+                    auction.endedAt(),
+                    auction.createdBy(),
+                    auction.updatedBy(),
+                    auction.deletedBy(),
+                    auction.createdAt(),
+                    OffsetDateTime.now(),
+                    auction.deletedAt()
+            );
+
+            long updated = auctionRepository.closeAuctionStatus(updatedAuction);
+
+            if (updated == 1L) {
+                return Response.create("07", "00", "Sukses", updated);
+            } else {
+                return Response.create("07", "01", "Gagal Close Status", null);
+            }
+        });
+    }
+
+    public Response<Object> createBidding(final Authentication authentication, final BuyerCreateBiddingReq req, final Long id) {
+        return precondition(authentication, User.Role.BUYER).orElseGet(() -> {
+            if (req == null) {
+                return Response.badRequest();
+            }
+
+            List<Auction> bidingId = AuctionRepository.findById(id);
+            if (bidingId.isEmpty()) {
+                return Response.create("05", "01", "Auction not found.", null);
+            }
+
+            final AuctionBid bid = new AuctionBid(
+                    null,
+                    id,
+                    req.bid(),
+                    req.bidder(),
+                    OffsetDateTime.now()
+            );
+
+            final long saved = auctionRepository.saveBidding(bid);
+
+            if (saved == 0L) {
+                return Response.create("05", "01", "Gagal membuat bidding.", null);
+            } else {
+                return Response.create("05", "00", "Sukses membuat bidding.", saved);
             }
         });
     }
